# journal_bot

./: .gitignore  Dockerfile  EXAMPLE_commit-and-sync_v1.1.0.sh  IMPLEMENTATION_SPECIFIC_NOTES.md  README.md  bot.py  entrypoint.sh  pyproject.toml  requirements.txt  run.sh
