[project]
name = "journal-bot"
version = "1.1.0"
description = "A Telegram bot connecting a Git-backed journal to Claude AI CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "AJ Anderson" }
]
keywords = ["telegram", "bot", "journal", "claude", "ai", "git"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Text Processing",
]

dependencies = [
    "python-telegram-bot>=20.6",
    "telegramify-markdown",
]

[project.urls]
Repository = "https://github.com/ajanderson/journal-bot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
include = [
    "bot.py",
    "requirements.txt",
    "Dockerfile",
    "run.sh",
    "README.md",
    "LICENSE",
]
